# coding-agent-playbook-20260707

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/: app-broker.local.json.example  settings.json
.github/workflows/: README.md  actionlint.yml  ci.yml  md-links.yml  pages.yml  ps1-ascii.yml  python-syntax.yml  shellcheck.yml
app/: .dockerignore  .gitignore  README.md  docker-compose.yml  one-pager.md  package-lock.json  package.json  tsconfig.base.json
app/docs/: design.md
app/infra/: cdk.json  package.json  tsconfig.json
docs/: README.md  headful-bridge.md  instructor.md  kimi-fallback.md  parallel.md  repo-settings.md  setup.md  stage-playbook.md
docs/decisions/: app-identity-gate.md  cloud-unattended-sre.md  decomposed-multiagent-a2a.md  devcontainer-sandbox.md  merge-gate-design.md  parallel-hotl-execution.md  (+1 more)
examples/: README.md
rules/: box-ops.md  box-personas.md  chrome-devtools.md  code-comments.md  commit-pr.md  pr-followup.md  skills.md  slides.md  stages.md  worktrees.md
sbx/: Dockerfile  README.md
scripts/: build-image.ps1  build-image.sh  cdp-bridge.ps1  cdp-bridge.sh  check-setup.ps1  check-setup.sh  chrome-profile.ps1  chrome-profile.sh  claude-kimi.ps1  claude-kimi.sh  dev.ps1  dev.sh
slides/: 00-intro.html  01-brainstorm.html  01-setup.html  02-brainstorm.html  02-setup.html  03-design.html  04-implement.html  05-parallel.html  06-operate.html  90-appendix-skills.html  index.html  template.html
tools/a2a-review/client-demo/: client.py  pyproject.toml
tools/a2a-review/codex-a2a-server/: pyproject.toml  server.py
(+124 files in other folders)
